# mnemex

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  BEAR_PLAN.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING 2.md  CONTRIBUTING.md  ELI5.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  README.md.edtz  ROADMAP.md  SAAS_SCALING_STRATEGY.md  SECURITY.md  SUGGESTED-IMPROVEMENTS.md  context7.json  index.html  mkdocs 2.yml  pyproject.toml  replit.md  requirements.txt  sitemap.xml  stm-server-research.md
.beads/: issues.jsonl
CHANGELOG/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
ROADMAP/: index.html
agents/: index.html
api/: index.html
architecture/: index.html
bear-integration/: index.html
configuration/: index.html
conversational-activation-plan/: index.html
deployment/: index.html
docs/: CHANGELOG.md  CONTRIBUTING.md  api.md  architecture.md  bear-integration.md  configuration.md  conversational-activation-plan.md  deployment.md  future_roadmap.md  graph_features.md  index.md  installation.md  mcp-tools.md  memory-mcp-visualization.md  prompt_injection.md  prompt_optimization_flow.md  quickstart.md  scoring_algorithm.md  security.md  stopper-proactive-case-study.md  storage.md  use-cases.md
examples/: README.md  claude_desktop_config.json  usage_example.md
future_roadmap/: index.html
graph_features/: index.html
installation/: index.html
marketing/: announcement-0.4.0-blog 2.md  announcement-0.4.0-deep-dive.md  announcement-0.4.0-linkedin.md  announcement-0.4.0-tweet.md  announcement-0.4.0.md  marketing 2.md  marketing-checklist 2.md
memory-mcp-visualization/: index.html
natural-language-activation-plan/: index.html
prompt_injection/: index.html
prompt_optimization_flow/: index.html
quickstart/: index.html
scoring_algorithm/: index.html
scripts/: CONVERTER_QUICKREF.md  README_CONVERTER.md
search/: search_index.json
security/: index.html
src/mnemex/: __init__.py  (+5 more)
stm-server/: .gitignore  README.md
stopper-proactive-case-study/: index.html
storage/: index.html
tests/: __init__.py  conftest.py  test_config_ltm_index_max_age.py  test_consolidation.py  test_core_scoring.py  test_decay.py  test_decay_models.py  test_issue_97.py  test_ltm_index.py  test_search_unified.py  test_security_paths.py  test_security_permissions.py  test_security_secrets.py  test_security_validators.py  test_storage.py  test_tools_consolidate.py  test_tools_gc.py  test_tools_memory_management.py  test_tools_promote.py  test_tools_save.py  test_tools_search.py  test_tools_touch.py
use-cases/: index.html
(+177 files in other folders)
