[project]
name = "stm-server"
version = "0.2.0"
description = "Short-Term Memory Server with temporal decay and reinforcement for AI systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "STM Research"}
]
keywords = ["mcp", "memory", "ai", "llm", "temporal-decay"]

dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.1.0",
    "markdown>=3.5.0",
    "GitPython>=3.1.40",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.0.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
stm-server = "stm_server.server:main"
stm-migrate = "stm_server.storage.migrate:main"
stm-index-ltm = "stm_server.storage.ltm_index:main"
stm-backup = "stm_server.backup.git_backup:main"
stm-vault = "stm_server.vault.markdown_writer:main"
stm-search = "stm_server.tools.search_unified:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stm_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--cov=stm_server",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
show_error_codes = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "frontmatter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "markdown.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "git.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["stm_server"]
